<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linear_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ua.com.gusakov.metronome.MainActivity">

    <ImageButton
        android:background="?android:selectableItemBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings"
        android:layout_gravity="right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/manual_id_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/manual"
            android:textAllCaps="true"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/blue"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/vibration_image_view_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:src="@drawable/v_dark" />

            <ImageView
                android:id="@+id/flash_image_view_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:src="@drawable/flash_dark" />

            <ImageView
                android:id="@+id/sound_image_view_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:src="@drawable/sound_dark" />
        </LinearLayout>

        <TextView
            android:id="@+id/set_bmp_text_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/set_bmp"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bmp_number_id"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:gravity="center"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:nextFocusLeft="@id/bmp_number_id"
                android:nextFocusUp="@id/bmp_number_id"
                android:selectAllOnFocus="true"
                android:text="100"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/bmp_name_text_view_id"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="30dp"
                android:text="@string/bpm"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/minus_image_view_id"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/minus" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:max="200"
                android:progress="100"
                android:progressDrawable="@drawable/swipe_bg"
                android:thumb="@drawable/arrows" />

            <ImageView
                android:id="@+id/plus_image_view_id"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/plus" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/indicator_text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/indicator"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/indicator_id"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/indicator_no" />


    <ImageView
        android:id="@+id/start_button_id"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/start" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="bottom">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:focusable="false"
        android:focusableInTouchMode="false"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</LinearLayout>
</LinearLayout>

